--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   fluttertoast: ^3.1.3
   i18n_extension: ^1.3.2
+  flutter_datetime_picker: ^1.3.4
+  intl: ^0.16.0
 
 dev_dependencies:
   flutter_test:
